--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&family=Playfair+Display&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -14,7 +15,7 @@
 
 body{
   overflow-x: hidden;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Montserrat', serif;
 }
 
 .switch {
@@ -112,8 +113,36 @@ body{
   touch-action: none;
 }
 
+.dark-modecard {
+  border-radius: 5px;
+  box-shadow: 0px 10px 30px -5px rgba(255, 255, 255, 0.3);
+  transition: box-shadow 0.5s, opacity 0.5s;
+  will-change: transform;
+  cursor: grab;
+  overflow: hidden;
+  touch-action: none;
+}
+
 .card:hover {
   box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
+}
+
+.dark-modecard:hover{
+  box-shadow: 0px 30px 100px -10px rgba(255, 255, 255, 0.4);
+}
+
+.dark-modecard > div {
+  
+  will-change: transform;
+  height: 100%;
+  margin: 0vw 0;
+}
+
+.dark-modecard > div > * {
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  margin: 0vw 0;
 }
 
 .card > div {
